# sentiment-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: data_cleaning.ipynb
