[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Build a transformer encoder from scratch for sentiment analysis using PyTorch. This project focuses on understanding and implementing the core components of transformer architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
